feat:can make triangle

--- a/style.css
+++ b/style.css
@@ -148,6 +148,15 @@ p{
 
 }
 
+.hint{
+  opacity: 0.5;
+  padding: 0.5rem 2rem;
+  border-radius: 2rem;
+  border: 3px solid #9CA3AF;
+  background-color: #D1D5DB;
+}
+
+
 @media screen and (max-width:434px) {
   .container{
       display: flex;
