--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ h1{
 }
 section{
   padding: 2rem;
-  max-width: 600px;
-  margin: auto;
+  max-width: 700px;
+  margin: 2rem 1rem;
 }
 
 input{
@@ -147,6 +147,17 @@ p{
   margin:3rem auto;
 
 }
+.qresult{
+  background-color: white;
+  text-align: center;
+  padding: 1rem;
+  width: 100%;
+  max-width: 600px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border: 5px solid #5B21B6;
+  margin:auto;
+}
 
 .hint{
   opacity: 0.5;
@@ -154,6 +165,36 @@ p{
   border-radius: 2rem;
   border: 3px solid #9CA3AF;
   background-color: #D1D5DB;
+}
+
+/* quiz */
+
+
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.question{
+  max-width: 900px;
+  margin: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.3rem;
+  padding: 1rem;
+  border: 5px solid #5B21B6;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.question label{
+  padding: 0.5rem 0.5rem 0.5rem 0;
+}
+input[type=radio]{
+  margin: 0;
+  cursor: pointer;
+}
+form{
+  margin: 0;
 }
 
 
